--- a/app_tasking/templates/index.html
+++ b/app_tasking/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task List</title>
     <!-- Flaskで使用される静的ファイルを「static」というフォルダに入れておくことで、自動的に検出してくれる -->
-     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <!-- container -->
